fix grayscale on firefox

--- a/media/assets/css/app.css
+++ b/media/assets/css/app.css
@@ -5047,7 +5047,7 @@ p {
     left: 0px;
     top: 0px;
 
-    filter: grayscale();
+    filter: grayscale(0);
     -webkit-filter: grayscale(0);
 }
 
